# litmus

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  llm.py  main.py  queue_worker.py  scheduler.py
backend/app/analysis/: __init__.py  assessor.py  criteria.py
backend/app/api/: __init__.py  assessments.py  facilities.py  papers.py  queue.py  reference_assessments.py  scan.py
backend/app/models/: __init__.py  assessment.py  facility.py  paper.py  queue.py  reference_assessment.py
backend/app/research/: __init__.py  facility_researcher.py
backend/app/scrapers/: __init__.py  arxiv.py  biorxiv.py  pubmed.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assessments/: page.tsx
frontend/src/app/assessments/[id]/: page.tsx
frontend/src/app/evaluation/: page.tsx
frontend/src/app/facilities/: page.tsx
frontend/src/app/flagged/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/app/scan/: page.tsx
frontend/src/components/: AssessmentDetail.tsx  PaperTable.tsx  RiskBadge.tsx  Sidebar.tsx  StatsCard.tsx
frontend/src/lib/: api.ts  utils.ts
